netmaumau (0.20.0) UNRELEASED; urgency=low

  * unlimited amount of players

 -- Heiko Schäfer <heiko@rangun.de>  Fri, 29 May 2015 16:53:16 +0200

netmaumau (0.19.0) UNRELEASED; urgency=low

  * improved ace/king/queen rounds
  * fixed endless loop of AI under some circumstances

 -- Heiko Schäfer <heiko@rangun.de>  Fri, 22 May 2015 08:06:37 +0200

netmaumau (0.18.0) UNRELEASED; urgency=low

  * improved hard AI
  * added easy (entirely random playing) AI
  * many bugfixes

 -- Heiko Schäfer <heiko@rangun.de>  Sun, 03 May 2015 12:51:06 +0200

netmaumau (0.17.1) UNRELEASED; urgency=low

  * improved Lua returned type checking
  * better memory management
  * minor optimizations

 -- Heiko Schäfer <heiko@rangun.de>  Thu, 02 Apr 2015 12:39:35 +0200

netmaumau (0.17.0) UNRELEASED; urgency=low

  * open magic mime database once per session
  * using Lua script as rule set

 -- Heiko Schäfer <heiko@rangun.de>  Tue, 24 Mar 2015 06:24:43 +0100

netmaumau (0.16) UNRELEASED; urgency=low

  * improved AI
  * ran wrap-and-sort over debian/

 -- Heiko Schäfer <heiko@rangun.de>  Thu, 05 Mar 2015 12:09:20 +0100

netmaumau (0.15) UNRELEASED; urgency=low

  * amount of card decks configurable
  * amount of initial cards configurable
  * fix: clarified an untransparent move of a remote/ai player
  * fix: better handling of refused connections
  * improved a/k/q rounds and seven rule

 -- Heiko Schäfer <heiko@rangun.de>  Mon, 23 Feb 2015 07:11:11 +0100

netmaumau (0.14) UNRELEASED; urgency=low

  * fixed ai delay settings
  * improved AI

 -- Heiko Schäfer <heiko@rangun.de>  Wed, 11 Feb 2015 05:48:13 +0100

netmaumau (0.13) UNRELEASED; urgency=low

  * direction change implemented

 -- Heiko Schäfer <heiko@rangun.de>  Tue, 03 Feb 2015 12:56:58 +0100

netmaumau (0.12) UNRELEASED; urgency=low

  * fixed Ace/King/Queen round bug, allowing to start the round at any time

 -- Heiko Schäfer <heiko@rangun.de>  Wed, 28 Jan 2015 13:00:38 +0100

netmaumau (0.11) UNRELEASED; urgency=low
