@@ -1,0 +1,1 @@
+/usr/share/bash-completion/completions/nmm-server
