@@ -1,3 +1,4 @@
 /etc/xinetd.d/netmaumau
 /usr/share/netmaumau/*.PNG
 /usr/share/netmaumau/*.lua
+/usr/share/bash-completion/completions/nmm-server
